Wrap chat comments correctly

--- a/web/src/main/webapp/css/users/users.less
+++ b/web/src/main/webapp/css/users/users.less
@@ -8,7 +8,7 @@ width: 340px;
   max-width: none;
   width: auto;
   box-sizing: border-box;
-  white-space: nowrap;
+  white-space: normal;
   overflow: visible;
 }
 
